<resources>
    <string name="app_name">NewNewsApi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="categories">CATEGORIES</string>
    <string name="general">General</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="sign_in">Sign in</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sing_up">Sing Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>

</resources>