<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightMediumGray"
        tools:context=".presentation.ui.news.bottomsheet.NewsBottomSheet">

        <TextView
            android:id="@+id/mealType_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:checkedChip="@+id/chip_general"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealType_txt"
            app:selectionRequired="true"
            app:singleSelection="true">

            <!-- business entertainment general health science sports technology -->
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_general"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:text="@string/general" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_science"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/science" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sports"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/sports" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_health"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/health" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_technology"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp"
                    android:text="@string/technology" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_business"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/business" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_entertainment"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/entertainment" />



        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/apply_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:text="Apply"
            android:textAllCaps="false"
            android:backgroundTint="@color/buttonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
